fix: removed padding for hands on small screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -153,7 +153,6 @@ img {
     }
 
     .hand {
-        padding: inherit;
         margin: inherit;
     }
 
